Refactor: Rename 'jobs' to 'projects' and 'job_categories' to 'project_categories'; create new 'jobs' and 'job_categories' tables for traditional employment feature
- Created ProjectCategoryRepository and ProjectRepository for managing project categories and projects.
- Implemented EmploymentJobService for handling traditional employment jobs.
- Developed ProjectCategoryService for managing project categories.
- Established ProjectService for project management operations.
- Added SQL migration scripts to refactor existing tables and create new ones for employment jobs.
- Inserted seed data for job categories and sample job postings.

--- a/services/marketplace-service/pom.xml
+++ b/services/marketplace-service/pom.xml
@@ -128,6 +128,13 @@
             <artifactId>jackson-datatype-hibernate6</artifactId>
         </dependency>
 
+        <!-- Hibernate Types for JSONB support -->
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+
         <!-- AOP for logging and monitoring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
