--- a/services/marketplace-service/src/main/resources/application.yml
+++ b/services/marketplace-service/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration
     schemas: public
+    validate-on-migrate: false
   
   data:
     redis:
