--- a/services/marketplace-service/src/main/resources/application.yml
+++ b/services/marketplace-service/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
-    locations: classpath:db/migration
+    locations: classpath:db/migration,classpath:db/seed_data
     schemas: public
     validate-on-migrate: false
   
