feat(content-service): add seed script for initial data population including categories, tags, authors, and sample content
fix(content-service): update tsconfig to exclude seed.ts from compilation

fix(marketplace-service): add JdbcTypeCode annotations for array fields in Project and User entities

fix(marketplace-service): create migration script to fix column types for Hibernate compatibility in users and jobs tables

--- a/services/content-service/tsconfig.json
+++ b/services/content-service/tsconfig.json
@@ -23,6 +23,6 @@
       "@infrastructure/*": ["src/infrastructure/*"]
     }
   },
-  "include": ["src/**/*", "prisma/seed.ts"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["src/**/*"],
+  "exclude": ["prisma/seed.ts", "node_modules", "dist", "tests"]
 }
