--- a/services/marketplace-service/src/main/resources/application.yml
+++ b/services/marketplace-service/src/main/resources/application.yml
@@ -28,10 +28,13 @@ spring:
   
   flyway:
     enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration,classpath:db/seed_data
+    baseline-on-migrate: false
+    locations: classpath:db/migration
     schemas: public
     validate-on-migrate: false
+    placeholders:
+      # Migration settings
+      placeholder: value
   
   data:
     redis:
