--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.16",
