feat: enhance service health checks and improve user handling
- Added health check condition for marketplace-service in docker-compose.yml.
- Updated useUsers hook to fetch freelancers from a dedicated endpoint.
- Modified Dockerfile for content-service to ensure Prisma can verify TLS using system CAs.
- Updated User entity in marketplace-service to change column names and handle skills, certifications, and languages as comma-separated strings.
- Removed outdated seed data SQL files and added new migrations for budget and portfolio columns.
- Converted array fields to text in the database for Hibernate compatibility.
- Seeded comprehensive test data for users, projects, jobs, applications, proposals, and portfolio items.

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -244,6 +244,8 @@ services:
         condition: service_healthy
       kafka:
         condition: service_healthy
+      marketplace-service:
+        condition: service_healthy
     networks:
       - marketplace-network
     healthcheck:
