Refactor and remove obsolete PowerShell scripts; update content service database configuration
- Deleted unused PowerShell scripts: test-user-agent.ps1, test-webclient.ps1, test-with-curl.ps1, verify-frontend-ports.ps1, verify-frontend-rendering.ps1, verify-services.ps1.
- Updated content service Docker Compose files to change database connection strings from content_db to marketplace_db.
- Modified environment example file for content service to reflect new database configuration.
- Adjusted database configuration in content service to use the new marketplace_db schema.
- Enhanced Kafka service to ensure topics are created at startup if missing, with configurable partition and replication settings.
- Updated LMS service to include Kafka topic creation settings in appsettings.
- Removed temporary token file and test repository file as they were no longer needed.

--- a/services/lms-service/appsettings.json
+++ b/services/lms-service/appsettings.json
@@ -45,7 +45,10 @@
   },
   "KafkaSettings": {
     "BootstrapServers": "localhost:9092",
-    "GroupId": "lms-service-group"
+    "GroupId": "lms-service-group",
+    "DefaultNumPartitions": 3,
+    "DefaultReplicationFactor": 1,
+    "TopicPartitions": {}
   },
   "RedisSettings": {
     "ConnectionString": "localhost:6379"
