--- a/services/content-service/docker-compose.yml
+++ b/services/content-service/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=8083
-      - DATABASE_URL=postgresql://postgres:postgres@content-db:5432/content_db
+      - DATABASE_URL=postgresql://postgres:postgres@marketplace-db:5432/marketplace_db?schema=content
       - REDIS_HOST=content-redis
       - REDIS_PORT=6379
       - KAFKA_BROKERS=kafka:9092
@@ -31,7 +31,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=content_db
+      - POSTGRES_DB=marketplace_db
     ports:
       - "5434:5432"
     volumes:
