--- a/services/content-service/package.json
+++ b/services/content-service/package.json
@@ -23,6 +23,9 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
