--- a/services/lms-service/appsettings.Development.json
+++ b/services/lms-service/appsettings.Development.json
@@ -35,7 +35,10 @@
   },
   "KafkaSettings": {
     "BootstrapServers": "localhost:9092",
-    "GroupId": "lms-service-dev-group"
+    "GroupId": "lms-service-dev-group",
+    "DefaultNumPartitions": 3,
+    "DefaultReplicationFactor": 1,
+    "TopicPartitions": {}
   },
   "RedisSettings": {
     "ConnectionString": "localhost:6379"
