Refactor structure  'CLIENT' to 'COMPANY'
- Updated User role from 'CLIENT' to 'COMPANY' in frontend types.
- Changed Job entity to use 'companyId' instead of 'clientId'.
- Refactored RateLimitConfig to use 'companyIp' instead of 'clientIp'.
- Modified AuthController to handle company-specific logic for registration and login.
- Updated DashboardController to replace client dashboard with company dashboard.
- Refactored InvoiceController to use company instead of client terminology.
- Adjusted JobController to authorize COMPANY role instead of CLIENT.
- Refactored MilestoneController to use company terminology and logic.
- Updated PaymentController to reflect company actions.
- Refactored ProjectController to authorize COMPANY role instead of CLIENT.
- Removed ClientDashboardResponse and created CompanyDashboardResponse.
- Updated InvoiceDTOs to use company billing information.
- Created CompanyDashboard page in frontend with appropriate data fetching and display.

--- a/frontend/marketplace-web/public/manifest.json
+++ b/frontend/marketplace-web/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Designer Marketplace",
   "short_name": "Marketplace",
-  "description": "Connect with talented designers and clients",
+  "description": "Connect with talented designers and companies on Designer Marketplace.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
