Refactor database schema for user roles and job management
- Updated the core users table to separate role-specific data into companies and freelancers tables.
- Removed user_type column and adjusted role constraints.
- Created companies and freelancers tables with relevant fields and constraints.
- Modified foreign key references in jobs, job_applications, projects, proposals, and contracts tables to link to the new companies and freelancers tables.
- Changed data types for salary and budget fields to NUMERIC for consistency.
- Added new fields and indexes to enhance performance and data integrity across the schema.

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -190,7 +190,7 @@ services:
   marketplace-service:
     build:
       context: ../services/marketplace-service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prebuilt
     ports:
       - "8080:8080"
     environment:
