feat: Enhance Marketplace and LMS Services with Database Migrations and Initialization Scripts
- Updated job categories and jobs migration scripts to reflect company-centric terminology.
- Added MongoDB initialization script for LMS service to create collections and indexes on startup.
- Created new migration for support and audit tables in the Marketplace service.
- Renamed seed data migration to maintain sequential order and updated it to properly handle companies and freelancers.
- Documented database migration and MongoDB setup process for clarity and future reference.

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+      - ./mongodb-seed/init-lms.js:/docker-entrypoint-initdb.d/init-lms.js
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
