Add comprehensive seed data for marketplace service, including proposals, contracts, milestones, invoices, payments, payouts, reviews, portfolio items, job applications, and tutorials; remove outdated test JSON files and fix data relationships.

--- a/services/marketplace-service/src/main/resources/application.yml
+++ b/services/marketplace-service/src/main/resources/application.yml
@@ -149,7 +149,11 @@ logging:
     root: INFO
     com.designer.marketplace: DEBUG
     org.springframework.web: INFO
-    org.springframework.security: INFO
+    org.springframework.security: WARN
+    org.springframework.data: WARN
+    org.springframework.data.redis: WARN
+    org.springframework.boot.autoconfigure: WARN
+    org.springframework.boot.autoconfigure.data: WARN
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
   pattern:
