feat: add database migration script for courses and resources
- Implemented a migration script to create the courses, lessons, and resources tables along with necessary indexes and enums.
- Added SQL migration file for the same schema changes.
- Updated Prisma schema to include new models and enums for courses and resources.
- Refactored courses service to utilize the new Prisma client structure.
- Removed obsolete seed data files related to tutorials and marketplace service.

--- a/services/content-service/package.json
+++ b/services/content-service/package.json
@@ -19,6 +19,8 @@
     "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:seed": "tsx prisma/seed.ts",
     "prisma:seed:tutorials": "tsx prisma/tutorials-seed.ts",
+    "prisma:seed:courses": "tsx prisma/courses-seed.ts",
+    "prisma:seed:all": "npm run prisma:seed && npm run prisma:seed:tutorials && npm run prisma:seed:courses",
     "prisma:studio": "prisma studio",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
