--- a/services/lms-service/appsettings.json
+++ b/services/lms-service/appsettings.json
@@ -26,7 +26,8 @@
   "Port": 8082,
   "MongoDbSettings": {
     "ConnectionString": "mongodb://mongo_user:mongo_pass_dev@localhost:27017/?authSource=admin",
-    "DatabaseName": "lms_db"
+    "DatabaseName": "lms_db",
+    "EnableMigrations": true
   },
   "AwsSettings": {
     "AccessKeyId": "",
