feat(tests): introduce mock services for end-to-end testing and refactor test setup
- Added mock database, Redis, Kafka, and storage services to facilitate end-to-end tests without real dependencies.
- Refactored test setup to remove legacy mocks and integrate new mock services.
- Created separate Vitest configuration for end-to-end tests to streamline testing processes.
- Removed outdated unit tests for analytics, category, comment, content, search, and tag services.

--- a/services/content-service/package.json
+++ b/services/content-service/package.json
@@ -14,9 +14,11 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
+    "test:all": "npm run test && npm run test:e2e",
     "db:migrate": "tsx scripts/run-migrations.ts",
     "db:seed": "tsx scripts/run-seeds.ts",
     "db:reset": "tsx scripts/reset-db.ts",
+    "prisma:generate": "prisma generate",
     "prisma:seed:tutorials": "tsx prisma/tutorials-seed.ts",
     "prisma:seed:all": "npm run prisma:seed && npm run prisma:seed:tutorials",
     "prisma:studio": "prisma studio",
